--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,4 +10,24 @@
         <item>@string/prefs_theme_light</item>
         <item>@string/prefs_theme_dark</item>
     </string-array>
+    <!-- Reply Preference -->
+    <string-array name="reply_entries">
+        <item>Reply</item>
+        <item>Reply to all</item>
+    </string-array>
+
+    <string-array name="reply_values">
+        <item>reply</item>
+        <item>reply_all</item>
+    </string-array>
+
+
+    <string-array name="array_prefs_media_compression_labels">
+        <item>Smaller size</item>
+        <item>Higher quality</item>
+    </string-array>
+    <string-array name="array_prefs_media_compression_values">
+        <item>smaller_size</item>
+        <item>higher_quality</item>
+    </string-array>
 </resources>
