--- a/app/src/main/res/layout/custom_bottom_nav.xml
+++ b/app/src/main/res/layout/custom_bottom_nav.xml
@@ -1,14 +1,14 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_bar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bottom_nav_height"
     android:background="@drawable/bottom_nav_background"
+    android:baselineAligned="false"
     android:orientation="horizontal"
-    android:weightSum="3"
-   android:baselineAligned="false">
+    android:weightSum="3">
+
 
     <RelativeLayout
         android:layout_width="0dp"
@@ -22,10 +22,10 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="0dp"
-            android:backgroundTint="@color/colorBottomNavbar"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
-            app:icon="@drawable/ic_home"
+            app:icon="@drawable/outline_perm_media_24"
             app:iconGravity="textStart"
             app:iconPadding="0dp"
             app:iconSize="24dp"
@@ -38,7 +38,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/my_media_button"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-4dp"
             android:clickable="true"
             android:focusable="false"
             android:padding="0dp"
@@ -54,20 +53,18 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
-        <com.google.android.material.button.MaterialButton
+
+        <ImageButton
             android:id="@+id/add_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="42dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/pill_bg"
             android:backgroundTint="@color/colorAddButton"
-            android:paddingTop="0dp"
-            android:paddingBottom="0dp"
-            app:icon="@drawable/baseline_add_white_24"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconSize="38dp"
-            app:iconTint="@color/colorOnAddButton"
+            android:paddingHorizontal="16dp"
+            android:src="@drawable/baseline_add_24"
             app:rippleColor="@color/c23_light_grey" />
 
     </FrameLayout>
@@ -84,6 +81,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="0dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:backgroundTint="@color/colorBottomNavbar"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
@@ -100,7 +98,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/settings_button"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-4dp"
             android:clickable="true"
             android:focusable="false"
             android:padding="0dp"
