--- a/app/src/main/res/layout/fragment_main_media.xml
+++ b/app/src/main/res/layout/fragment_main_media.xml
@@ -22,6 +22,13 @@
         </LinearLayout>
     </ScrollView>
 
+    <!-- RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
+        android:id="@+id/media_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/add_media_hint"
         android:layout_width="match_parent"
