--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,67 +8,82 @@
     android:orientation="vertical"
     tools:context=".features.settings.SettingsFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/bt_general"
+        <FrameLayout
+            android:visibility="gone"
+            android:id="@+id/settings_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
+        <LinearLayout
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="@string/general"
-            android:textSize="22sp" />
+            android:gravity="top"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin">
 
-        <TextView
-            android:id="@+id/bt_space"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:textSize="22sp"
-            tools:text="Space FPO" />
+            <TextView
+                android:id="@+id/bt_general"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:text="@string/general"
+                android:textSize="22sp" />
 
-        <TextView
-            android:id="@+id/bt_folders"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:textSize="22sp"
-            android:text="@string/folders" />
+            <TextView
+                android:id="@+id/bt_space"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:textSize="22sp"
+                tools:text="Space FPO" />
 
-        <TextView
-            android:id="@+id/bt_about"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="24dp"
-            android:text="@string/action_about"
-            android:textColor="@color/c23_medium_grey" />
+            <TextView
+                android:id="@+id/bt_folders"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp"
+                android:textSize="22sp"
+                android:text="@string/folders" />
 
-        <TextView
-            android:id="@+id/bt_privacy"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="@string/action_privacy"
-            android:textColor="@color/c23_medium_grey" />
+            <TextView
+                android:id="@+id/bt_about"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="24dp"
+                android:text="@string/action_about"
+                android:textColor="@color/c23_medium_grey" />
 
-        <TextView
-            android:id="@+id/version"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:textColor="@color/c23_medium_grey"
-            android:textSize="12sp"
-            tools:text="Version 0.0.0" />
+            <TextView
+                android:id="@+id/bt_privacy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:text="@string/action_privacy"
+                android:textColor="@color/c23_medium_grey" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="@dimen/bottom_nav_padding" />
+            <TextView
+                android:id="@+id/version"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:textColor="@color/c23_medium_grey"
+                android:textSize="12sp"
+                tools:text="Version 0.0.0" />
 
-    </LinearLayout>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="@dimen/bottom_nav_padding" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
 
 </ScrollView>
