--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,6 +14,7 @@
         tools:ignore="AlwaysShowAction" />
 
     <item
+        android:visible="false"
         android:id="@+id/menu_folders"
         android:icon="@drawable/ic_menu"
         android:orderInCategory="300"
