--- a/app/src/main/res/values-night/bool.xml
+++ b/app/src/main/res/values-night/bool.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="dayMode">false</bool>
+    <bool name="dayModeInverse">true</bool>
 </resources>
