--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,15 +3,34 @@
 
     <!-- night theme colors -->
 
-    <color name="colorBackground">@color/black</color>
+    <color name="colorBackground">#16161D</color>
     <color name="colorOnBackground">@color/white</color>
+
+    <color name="colorPrimary">#000A0A</color>
     <color name="colorOnPrimary">@color/white</color>
-    <color name="colorPrimary">@color/c23_teal</color>
+    <color name="colorPrimaryContainer">@color/c23_teal</color>
+    <color name="colorOnPrimaryContainer">@color/white</color>
     <color name="colorPrimaryDark">@color/c23_teal_40</color>
+
+    <color name="colorSecondary">@color/c23_teal</color>
+    <color name="colorOnSecondary">@color/black</color>
+    <color name="colorSecondaryContainer">@color/c23_teal_20</color>
+    <color name="colorOnSecondaryContainer">@color/white</color>
+    <color name="colorSecondaryDark">@color/c23_teal_30</color>
+    <color name="colorSecondaryBright">@color/c23_teal_60</color>
+
+    <color name="colorSurface">#16161D</color>
+    <color name="colorOnSurface">@color/c23_light_grey</color>
+    <color name="colorTertiary">@color/c23_teal_60</color>
     <color name="colorText">@color/c23_light_grey</color>
+    <color name="colorError">@color/red</color>
+
+
+    <color name="inputBackground">#212021</color>
+    <color name="buttonBackground">@color/c23_teal_50</color>
     <color name="colorBottomNavbar">@color/c23_darker_grey</color>
     <color name="colorOnBottomNavbar">@color/white</color>
-    <color name="colorAddButton">@color/colorPrimary</color>
+    <color name="colorAddButton">@color/colorOnPrimary</color>
     <color name="colorOnAddButton">@color/colorBackground</color>
     <color name="colorNavigationDrawerBackground">@color/c23_nav_drawer_night</color>
     <color name="colorOnboarding23GetStarted">@color/colorPrimary</color>
