--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,18 +6,22 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="AppTheme.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="SaveAppTheme.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorSurface">@color/colorSurface</item>
+        <item name="colorOnSurface">@color/colorOnSurface</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorOnPrimary">@color/colorOnPrimary</item>
         <item name="android:colorBackground">@color/colorBackground</item>
-        <item name="android:textColor">@color/colorOnBackground</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowLightStatusBar" >@bool/dayMode</item>
-        <item name="android:windowLightNavigationBar" >@bool/dayMode</item>
-        <item name="navigationViewStyle">@style/NavigationViewStyle</item>
-        <item name="appBarLayoutStyle">@style/AppBarStyle</item>
+
+
+
         <item name="android:textViewStyle">@style/OATextViewStyle</item>
+
+        <item name="android:statusBarColor">@color/colorPrimary</item>
+        <item name="android:windowLightStatusBar">@bool/dayMode</item>
+        <item name="android:windowLightNavigationBar">@bool/dayMode</item>
+        <item name="navigationViewStyle">@style/NavigationViewStyle</item>
         <item name="buttonStyle">@style/OAButtonStyle</item>
         <item name="materialButtonStyle">@style/OAMaterialButtonStyle</item>
         <item name="dialogTheme">@style/AppDialogTheme</item>
@@ -26,6 +30,21 @@
         <item name="materialAlertDialogTheme">@style/AlertMaterialDialogTheme</item>
         <item name="preferenceTheme">@style/OAPreferenceStyle</item>
         <item name="switchPreferenceCompatStyle">@style/OASwitchPreferenceStyle</item>
+        <item name="floatingActionButtonStyle">@style/Widget.App.FloatingActionButton</item>
+        <item name="appBarLayoutStyle">@style/SaveApp.Widget.AppBarStyle</item>
+        <item name="toolbarStyle">@style/SaveApp.Widget.MaterialToolbarStyle</item>
+
+
+<!--        For App Bar Action Menu Text Color-->
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+
+<!--        Input Layout Style-->
+        <item name="textInputStyle">@style/Widget.SaveApp.TextInputLayout</item>
+        <item name="textAppearanceTitleMedium">@style/TextAppearance.App.TitleMedium</item>
+        <item name="textAppearanceBodySmall">@style/TextAppearance.App.BodySmall</item>
+        <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.SaveApp.SmallComponent</item>
+        <item name="materialSwitchStyle">@style/Widget.SaveApp.Switch</item>
     </style>
 
 
@@ -36,25 +55,35 @@
         <item name="android:dividerHeight">1dp</item>
     </style>
 
-<!--    <style name="MainTheme.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">-->
-<!--        <item name="colorPrimary">@color/colorPrimary</item>-->
-<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-<!--        <item name="colorOnPrimary">@color/colorOnPrimary</item>-->
-<!--        <item name="android:colorBackground">@color/colorBackground</item>-->
-<!--        <item name="android:textColor">@color/colorOnBackground</item>-->
-<!--        <item name="android:statusBarColor">@color/colorBackground</item>-->
-<!--        <item name="android:navigationBarColor">@color/colorBottomNavbar</item>-->
-<!--        <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/dayMode</item>-->
-<!--        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">@bool/dayMode</item>-->
-<!--        <item name="navigationViewStyle">@style/NavigationViewStyle</item>-->
-<!--        <item name="appBarLayoutStyle">@style/AppBarStyle</item>-->
-<!--        <item name="android:textViewStyle">@style/OATextViewStyle</item>-->
-<!--    </style>-->
+    <!--    <style name="MainTheme.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">-->
+    <!--        <item name="colorPrimary">@color/colorPrimary</item>-->
+    <!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+    <!--        <item name="colorOnPrimary">@color/colorOnPrimary</item>-->
+    <!--        <item name="android:colorBackground">@color/colorBackground</item>-->
+    <!--        <item name="android:textColor">@color/colorOnBackground</item>-->
+    <!--        <item name="android:statusBarColor">@color/colorBackground</item>-->
+    <!--        <item name="android:navigationBarColor">@color/colorBottomNavbar</item>-->
+    <!--        <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/dayMode</item>-->
+    <!--        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">@bool/dayMode</item>-->
+    <!--        <item name="navigationViewStyle">@style/NavigationViewStyle</item>-->
+    <!--        <item name="appBarLayoutStyle">@style/AppBarStyle</item>-->
+    <!--        <item name="android:textViewStyle">@style/OATextViewStyle</item>-->
+    <!--    </style>-->
 
     <style name="AppBottomSheetTheme" parent="ThemeOverlay.Material3.DayNight.BottomSheetDialog">
         <item name="buttonStyle">@style/OAButtonStyle</item>
         <item name="materialButtonStyle">@style/OAMaterialButtonStyle</item>
     </style>
+
+    <style name="App.Custom.BottomNavStyle" parent="Widget.Material3.BottomNavigationView">
+        <item name="itemActiveIndicatorStyle">@style/App.Custom.Indicator</item>
+        <item name="backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/colorPrimaryDark</item>
+    </style>
+
 
     <style name="AppDialogTheme" parent="Theme.AppCompat.DayNight.Dialog">
         <item name="buttonStyle">@style/OAButtonStyle</item>
@@ -68,8 +97,42 @@
 
     <!-- widgets / dialogs / alerts -->
 
-    <style name="AppBarStyle" parent="Widget.Material3.AppBarLayout">
-        <item name="android:background">@color/colorBackground</item>
+    <style name="SaveApp.Widget.AppBarStyle" parent="Widget.Material3.AppBarLayout">
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
+
+    <style name="SaveApp.Widget.MaterialToolbarStyle" parent="Widget.Material3.Toolbar">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="subtitleTextColor">@color/white</item>
+        <item name="navigationIconTint">@color/white</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
+    <style name="OABottomBarButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:inset">0dp</item>
+        <item name="android:paddingStart">0dp</item>
+        <item name="android:paddingEnd">0dp</item>
+        <item name="android:text">@string/action_settings</item>
+        <item name="android:textColor">@color/tabBarMenuButton</item>
+        <item name="android:textSize">14sp</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="icon">@drawable/ic_settings</item>
+        <item name="iconGravity">top</item>
+        <item name="iconPadding">5dp</item>
+        <item name="iconSize">32dp</item>
+        <item name="iconTint">@color/tabBarMenuButton</item>
+    </style>
+
+    <style name="Widget.SaveApp.Switch" parent="Widget.Material3.CompoundButton.MaterialSwitch">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.SaveApp.Switch</item>
+    </style>
+
+    <style name="ThemeOverlay.SaveApp.Switch" parent="">
+        <item name="colorPrimary">@color/colorTertiary</item>
+        <item name="colorSurfaceVariant">@color/red</item>
     </style>
 
     <style name="NavigationViewStyle" parent="Widget.Material3.NavigationView">
@@ -82,6 +145,7 @@
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">14sp</item>
     </style>
+
     <style name="AlertMaterialDialogTheme" parent="ThemeOverlay.Material3.Dialog.Alert">
         <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
         <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
@@ -97,8 +161,26 @@
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
-    <style name="OATextViewStyle">
-        <item name="fontFamily">@font/montserrat</item>
+    <style name="OATextViewStyle" parent="Widget.MaterialComponents.TextView">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textColorLink">@color/colorTertiary</item>
+    </style>
+
+    <style name="Widget.App.FloatingActionButton" parent="Widget.Material3.FloatingActionButton.Primary">
+        <item name="backgroundTint">@color/colorTertiary</item>
+        <item name="colorOnPrimaryContainer">@color/white</item>
+        <item name="colorContainer">@color/colorTertiary</item>
+        <item name="elevation">6dp</item>
+        <item name="tint">@color/white</item>
+        <item name="android:stateListAnimator">@animator/custom_fab_animator</item>
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.App.FloatingActionButton</item>
+    </style>
+
+
+    <style name="ShapeAppearanceOverlay.App.FloatingActionButton" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">64dp</item>
     </style>
 
     <style name="OAMaterialButtonStyle" parent="Widget.Material3.Button">
@@ -133,5 +215,57 @@
         <item name="boxCornerRadiusTopStart">@dimen/cornerRadius</item>
         <item name="hintTextColor">@color/c23_teal</item>
         <item name="cursorColor">@color/c23_teal</item>
+    </style>
+
+    <style name="Widget.SaveApp.TextInputLayout" parent="Widget.Material3.TextInputLayout.FilledBox">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.TextInputLayout</item>
+        <item name="shapeAppearance">@style/ShapeAppearance.SaveApp.SmallComponent</item>
+        <item name="hintTextColor">?attr/colorOnSurface</item>
+
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="boxStrokeWidthFocused">0dp</item>
+        <item name="boxBackgroundColor">@color/inputBackground</item>
+        <item name="boxCornerRadiusTopStart">8dp</item>
+        <item name="boxCornerRadiusTopEnd">8dp</item>
+        <item name="boxCornerRadiusBottomStart">8dp</item>
+        <item name="boxCornerRadiusBottomEnd">8dp</item>
+
+    </style>
+
+    <style name="ThemeOverlay.App.TextInputLayout" parent="">
+        <item name="colorPrimary">@color/colorPrimary</item>
+<!--        <item name="colorOnSurface">@color/colorText</item>-->
+        <item name="colorError">@color/colorError</item>
+        <item name="textAppearanceTitleMedium">@style/TextAppearance.App.TitleMedium</item>
+        <item name="textAppearanceBodySmall">@style/TextAppearance.App.BodySmall</item>
+        <item name="editTextStyle">@style/Widget.Material3.TextInputEditText.FilledBox</item>
+    </style>
+
+    <style name="TextAppearance.App.TitleMedium" parent="TextAppearance.Material3.TitleMedium">
+        <item name="fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+    </style>
+
+    <style name="TextAppearance.App.BodySmall" parent="TextAppearance.Material3.BodySmall">
+        <item name="fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+    </style>
+
+    <style name="ShapeAppearance.SaveApp.SmallComponent" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+    </style>
+
+
+    <style name="BreadcrumbButtonStyle" parent="Widget.Material3.Button.TextButton">
+        <item name="android:textColor">@color/colorOnBackground</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontStyle">normal</item>
+        <item name="fontFamily">@font/montserrat</item>
+    </style>
+
+    <style name="BreadcrumbChipStyle" parent="Widget.Material3.Chip.Assist">
+        <item name="chipBackgroundColor">@color/colorBackground</item>
+        <item name="chipStrokeWidth">0dp</item>
     </style>
 </resources>
